# plegma-espectro

./: .env.example  .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  SESSION_CTX_20260415_1.md  SESSION_CTX_20260418_1.md  SESSION_CTX_20260424_1.md  SESSION_CTX_20260425_1.md  SESSION_CTX_20260425_2.md  SESSION_CTX_20260425_3.md  SESSION_CTX_20260429_1.md  SESSION_CTX_20260429_3.md  SESSION_CTX_20260501_1.md  SESSION_CTX_20260502_1.md  SESSION_CTX_20260502_2.md  SESSION_CTX_20260507_1.md  SESSION_CTX_20260509_1.md  SESSION_CTX_20260519_2.md  SESSION_CTX_20260520_1.md  SESSION_CTX_20260521_1.md  SESSION_CTX_20260523_1.md  deploy.ps1  setup.ps1
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
app/: README.md  pubspec.yaml
app/android/app/: build.gradle.kts
app/android/app/src/main/cpp/: CMakeLists.txt
app/lib/: main.dart
app/lib/l10n/: app_localizations.dart
app/lib/models/: wallet_model.dart
app/lib/providers/: validator_provider.dart  wallet_provider.dart
core/: admin_setup.py  aerarium.py  aerarium_swap.py  auth.js  core_api.py  core_consenso.py  core_dag.py  genesis.py  genesis_contract.py  gossip.py  hardware_detector.py  labs_db.py  lattice_shield.py  miner_daemon.py  miner_engine.py  miner_server.py  minerador_gui.py  monitor_pagamentos.py  network_phase.py  pacto_dos_5.py  plegma_db.py  plegma_watchdog.sh  restart_service.sh  sentinela.py  shield_server.py  social_db.py  test_bateria_completa.py  test_plegma_integrity.py  teste_genesis.py  tx_verifier.py  wallet.py  wallet_server.py  zk_press.py
landing/: auth-simulator.html  auth.js  deploy.ps1  index.html
landing/admin/: index.html
landing/ajuda/: index.html
landing/blog/: index.html
landing/console/: index.html
landing/cookies/: index.html
landing/css/: style.css
landing/dashboard/: index.html
landing/financas/: index.html
landing/forge/: forge.html  index.html  view.html  zkm-player.js
landing/fundacao/: index.html
landing/genesis/: index.html
landing/labs/: index.html
landing/podcast/: index.html
landing/privacidade/: index.html
landing/quem-somos/: index.html
landing/servicos/: index.html
landing/social/: index.html
landing/socio-fundador/: index.html
landing/termos/: index.html
landing/testnet/: index.html
orchestrator/: chk_flow_usdc.py  chk_monitor_code.py  chk_monitor_db.py  chk_monitor_live.py  chk_monitor_proc.py  chk_rpc_compat.py  chk_usdc_received.py  daemon.py  daemon_config.py  daemon_status.py  deploy_app.py  deploy_launch_date.py  domain_loader.py  event_log.py  fix_monitor_rpc.py  fix_pre_send.py  launch_sweep.py  limpar_arquivados.py  neural_memory.py  orchestrator.py  restart_core_all.py  router.py  setup_tls_regional.py  test_rpcs.py  test_rpcs2.py  update_rpc_list.py  verify_monitor_final.py
orchestrator/agents/: __init__.py  analyst.py  auto_update_agent.py  briefing_agent.py  cartorio_deploy_agent.py  cartorio_monitor.py  coder.py  consensus_engine.py  coordinator.py  dag_auditor.py  deploy.py  flutter_tester.py  governance_watch.py  network_sync.py  security.py  server_monitor.py  social_manager.py  stability_guardian.py  test_runner.py  token_saver.py  validation.py
scripts/: deploy_landing.ps1  notify_discord.ps1  setup_zk.sh  zk_press.py
security/: L99_AUDITORIA_COMPLETA_20260521.md  RELATORIO_SEGURANCA_2026-03-29.md  fix_prints.py  sentinela_agent.py  test_battery.py
(+38 files in other folders)
